added logic to check winner and end game

--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 td {
-  border: 2px solid black;
+  border: 2px solid #333;
   height: 100px;
   width: 100px;
   text-align: center;
   vertical-align: middle;
-  cursor: pointer;
+  font-family: "Comic Sans MS", cursive, sans-serif;
   font-size: 70px;
+  cursor: pointer;
 }
 
 table {
@@ -13,7 +14,7 @@ table {
   position: absolute;
   left: 50%;
   margin-left: -155px;
-  top: 100px;
+  top: 50px;
 }
 
 table tr:first-child td {
@@ -34,13 +35,13 @@ table tr td:last-child {
 
 .endgame {
   display: none;
-  width: 105px;
-  top: 202px;
-  background-color: blue;
+  width: 200px;
+  top: 120px;
+  background-color: rgba(205, 133, 63, 0.8);
   position: absolute;
   left: 50%;
-  margin-left: -52px;
-  padding-top: 55px;
+  margin-left: -100px;
+  padding-top: 50px;
   padding-bottom: 50px;
   text-align: center;
   border-radius: 5px;
